media.css
/* MOBILE MENU */
#mobile-nav {
    display: none;
}

.mobile-menu {
    position: relative;
    display: block;
    margin-left: auto;
}

.mobile-links {
    position: absolute;
    top: 100%;
    right: 10%;
    width: fit-content;
    max-height: 0;
    overflow: hidden;
}

.mobile-links a {
    display: block;
    padding: 10px;
    text-align: center;
    font-size: 1.5rem;
    color: black;
    text-decoration: none;
    transition: all 0.3 ease-in-out;
}

.mobile-links li {
    list-style: none;
}

.mobile-links li:hover {
    text-decoration: underline;
    text-decoration-color: var(--dark-pink);
}

#mobile-dropdown.open {
    z-index: 10;
    max-height: 50vh;
    width: 40vh;
    background-color: var(--shear-pink);
    border-radius: 30px;
    border: var(--black-outline);
}


/* HAMBURGER ICON */
.mobile-icon {
    transform: translate(-50%, -50%);
    /*position: absolute;*/
    display: inline-block;
    /*height: 12px;
    width: 25px;*/
    height: 24px;
    width: 50px;
    cursor: pointer;
}

.mobile-icon:before,
.mobile-icon:after,
.mobile-icon div {
    background-color: black;
    content: "";
    display: block;
    height: 5px;
    margin: 7px 7px;
    transition: 0.5s;
}

#mobile-hamburger.open::before {
    transform: translateY(12px) rotate(135deg);
}
#mobile-hamburger.open::after {
    transform: translateY(-12px) rotate(-135deg);
}
#mobile-hamburger.open div {
    transform: scale(0);
}


/* MOBILE VIEW */
@media screen and (max-width: 992px) {

    body {
        font-size: var(--moble-font-base);
    }

    .title {
        font-size: var(--mobile-font-title);
        font-weight: var(--font-bold);
    }

    .subtitle {
        font-size: var(--mobile-font-subtitle);
        font-weight: var(--font-bold);
    }

    section {
        display: flex;
    }

    /* MOBILE BUTTONS */
    .btn-container {
        padding: 0rem;
        align-items: center;
    }

    .btn {
        font-size: var(--moble-font-base);
    }


    /* MOBILE NAV */
    #desktop-nav {
        display: none;
    }

    #mobile-nav {
        display: flex;
    }

    .outer-container {
        display: flex;
    }


    /* MOBILE PROFILE */
    #profile {
        display: flex;
        flex-direction: column;
    }


    /* MOBILE ABOUT */
    #about {
        height: 100%;
    }

    .overview-container {
        margin: 1.5rem;
    }

    .horizontal-container {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        margin: 0rem;
    }

    .text-outline {
        border-radius: 30px;
        padding: 10%;
        border: var(--black-outline);
        cursor: default;
    }


    /* MOBILE EXPERIENCE */
    .experience-inner-container {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        height: 100%;
        width: 85%;
    }

    .experience-desc {
        display: none;
    }

    .experience-headers {
        align-items: center;
        justify-content: center;
    }

    .experience-btn {
        display: flex;
    }


     /* MOBILE PROJECTS */
    .projects-grid-outer {
        display: flex;
        flex-direction: column;
    }

    .projects-grid-item {
        padding: 0.5rem;
    }

}

